@@ -1,7 +1,7 @@
 /*
  * File: termios-mingw.c
  *
- * Copyright 2008 Analog Devices Inc.
+ * Copyright 2006-2008 Analog Devices Inc.
  * Licensed under the GPL-2, see the file COPYING in this dir
  *
  * Description:
